<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ditu"
    tools:context=".StartActivity" >

	<!--
	<TextView
	    android:id="@+id/centerTV"
	    android:layout_centerVertical="true"
		android:layout_centerHorizontal="true"
		android:layout_centerInParent="true"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	    android:text="@string/app_name"/> 
	 -->
	
	<ImageButton
        android:id="@+id/btn_player"
        android:layout_marginTop="5dp"
	    android:layout_centerVertical="true"
		android:layout_centerHorizontal="true"
		android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:contentDescription="@string/palyer_btn_des"
		android:background="@drawable/player_btn_bg"/>
	<ImageButton
        android:id="@+id/btn_AI"
        android:layout_marginTop="5dp"
        android:layout_above="@id/btn_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:contentDescription="@string/ai_btn_des"
		android:background="@drawable/ai_btn_bg"/>
	
	<TextView
	    android:id="@+id/fullscreen_content"
	    android:layout_above="@id/btn_AI"
		android:layout_centerHorizontal="true"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	    
	    android:text="@string/dummy_content"
	    android:textColor="#777777"
	    android:textSize="20sp"
	    android:textStyle="bold" /> 

</RelativeLayout>
